# caliper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
baselines/: build_v9.py  v9.json
docs/: README.md  architecture.md  chatbot-maxturns.md  context.md  lessons-learned.md  methodology.md  quick-start.md  roadmap.md  self-evaluation.md  test-sets.md  why.md
docs/reference/: baseline-v8.md  curated-tasks.md  inherited-artifacts.md
examples/: cambridge_smoke.py  quickstart.py  standalone_eval.py
