[project]
name = "caliper"
version = "0.0.1"
description = "Evidence-based iteration framework for agent stacks. Built on Inspect AI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Caliper contributors" },
]
keywords = ["llm", "agent", "evaluation", "benchmark", "inspect-ai"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Dependencies will be added when actual code lands in Phase 1.
# For now this is a docs-only project skeleton.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# No package yet — Phase 1 will add src/caliper/
packages = []
