[project]
name = "caliper-workspace"
version = "0.0.1"
description = "Caliper monorepo workspace root. The actual packages live in packages/."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

# This is a uv workspace. The real Python packages are workspace members
# under packages/. The root pyproject.toml exists only to define the
# workspace and provide a single editable install + lockfile for all
# members. It is not itself a publishable package.
#
# See packages/<name>/pyproject.toml for each member's metadata.

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
caliper = { workspace = true }
caliper-browser-pilot = { workspace = true }
caliper-computer-pilot = { workspace = true }
caliper-chatbot = { workspace = true }

# Dev dependencies live at the workspace root so a single `uv sync` gives
# you everything needed to develop any package.
[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    # Pull every workspace member into the dev environment as editable
    # installs so cross-package imports work without per-package setup.
    "caliper",
    "caliper-browser-pilot",
    "caliper-computer-pilot",
    "caliper-chatbot",
]

[tool.pytest.ini_options]
# Discover tests across all workspace members.
testpaths = [
    "packages/caliper/tests",
    "packages/caliper-browser-pilot/tests",
    "packages/caliper-computer-pilot/tests",
    "packages/caliper-chatbot/tests",
]
# importmode=importlib lets multiple packages have a `tests/` directory
# without their test modules colliding in sys.modules. The default
# `prepend` mode tries to use directory names as module names, which
# breaks in a workspace where 4 packages each have a `tests/`.
addopts = ["--import-mode=importlib"]
# Explicit pythonpath for every workspace member. This bypasses the
# editable install entirely, which matters on macOS Sequoia: the OS
# marks freshly-created .pth files with the hidden flag
# (com.apple.provenance xattr), and Python 3.13's site.py refuses to
# process hidden .pth files — so the editable install silently breaks
# after every `uv sync`. Pointing pythonpath at the src/ dirs makes
# pytest robust regardless of .pth state.
pythonpath = [
    "packages/caliper/src",
    "packages/caliper-browser-pilot/src",
    "packages/caliper-computer-pilot/src",
    "packages/caliper-chatbot/src",
]
